compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__const_annotation_wrong_5.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "const mismatched_types: String = 7\nconst invalid_annotation: MyInvalidType = \"str\"\nconst invalid_value: String = MyInvalidValue\nconst invalid_unannotated_value = [1, 2.0]\nconst invalid_everything: MyInvalidType = MyInvalidValue"
---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:34
  │
1 │ const mismatched_types: String = 7
  │                                  ^

Expected type:

    String

Found type:

    Int

error: Unknown type
  ┌─ /src/one/two.gleam:2:27
  │
2 │ const invalid_annotation: MyInvalidType = "str"
  │                           ^^^^^^^^^^^^^

The type `MyInvalidType` is not defined or imported in this module.

error: Unknown variable
  ┌─ /src/one/two.gleam:3:31
  │
3 │ const invalid_value: String = MyInvalidValue
  │                               ^^^^^^^^^^^^^^

The name `MyInvalidValue` is not in scope here.

error: Type mismatch
  ┌─ /src/one/two.gleam:4:39
  │
4 │ const invalid_unannotated_value = [1, 2.0]
  │                                       ^^^

Expected type:

    Int

Found type:

    Float

error: Unknown type
  ┌─ /src/one/two.gleam:5:27
  │
5 │ const invalid_everything: MyInvalidType = MyInvalidValue
  │                           ^^^^^^^^^^^^^

The type `MyInvalidType` is not defined or imported in this module.

error: Unknown variable
  ┌─ /src/one/two.gleam:5:43
  │
5 │ const invalid_everything: MyInvalidType = MyInvalidValue
  │                                           ^^^^^^^^^^^^^^

The name `MyInvalidValue` is not in scope here.
